<resources>
    <string name="app_name" translatable="false">Grading Scale</string>
    <string name="grade">Grade</string>
    <string name="note_hint_et">Add the grade</string>
    <string name="total_points_et">Total Points</string>
    <string name="total_points_hint">Add the total points</string>
    <string name="points_hint">Add the points</string>
    <string name="points_et">Points</string>
    <string name="percentage_et">Percentage</string>
    <string name="percentage_hint">Add percentage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Grading Scale</string>
    <string name="nav_header_subtitle">The app for easy grade scale calculation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="snack_bar_text">Grade deleted</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="last_grade_delete">Not possible to delete the last grade in the scale. Use the "delete scale" option</string>
    <string name="last_gradescale_delete">Not possible to delete the last grade scale.</string>


    <string name="grade_calculator_menu">Grade Calculator</string>
    <string name="grade_scale_menu">Grade Scales edit and create</string>
    <string name="grade_update">Update Grade</string>
    <string name="dialog_named_grade1">Name of grade</string>
    <string name="dialog_percentage">Percentage</string>
    <string name="dialog_named_grade2">Name of Grade 2</string>
    <string name="dialog_cancel_response">No changes made</string>
    <string name="save_button">Save</string>
    <string name="save_new_grade_button">Save new grade</string>
    <string name="save_new_grade_scale_button">Save new grade scale</string>
    <string name="grade_updated_msg">Grade updated</string>
    <string name="grade_name_col">Grade Name</string>
    <string name="percentage_col">Percentage %</string>
    <string name="points_col">Points</string>
    <string name="weight_col">Weight</string>
    <string name="new_grade_settings">Add a new grade</string>
    <string name="new_grade_details_toast">Add details of new grade</string>
    <string name="new_grade_scale_settings">Add a new Grade Scale</string>
    <string name="grade_scale">Grade Scale</string>
    <string name="grade_scale_name_hint">Add the Grade Scale Name</string>
    <string name="delete_gs_setting">Delete current Grade Scale</string>
    <string name="modify_grade_scale_name_setting">Modify the name of current grade scale</string>
    <string name="weighted_grade_calculator">Weighted Grade Calculator</string>
    <string name="delete_grade_button">Delete Grade</string>
    <string name="total_grade_col">Total Grade</string>
    <string name="total_points_col">Total Points</string>
    <string name="weighted_grade_calculation_fraglabel">Weighted Grade Calculation</string>
    <string name="modify_single_grade_dialoglabel">Modify single grade</string>
    <string name="grade_scale_list_fragmentlabel">Grade Scales edit and create</string>
    <string name="grade_calculator_fraglabel">Grade Calculator</string>
    <string name="delete_dialoglabel">Delete?</string>
    <string name="modify_gradescale_dialoglabel">Modify grade scale</string>
    <string name="get_grade_scales_from_internet">Import Grade Scales</string>
    <string name="country">Filter by country</string>
    <string name="import_remote_header">Country and grade scale name</string>
    <string name="dialog_import">Import the selected grade scale?</string>
    <string name="dialog_import_success">Grade scale was imported successfully</string>
    <string name="dialog_import_fail">Grade scale import was not finished</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="import_grade_scales_fragment_label">Import Grade Scales</string>
    <string name="delete_grade_scale_question">Are you sure you wish to delete this current grade scale? Operation cannot be reversed</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="submit_new_gradescale">Share with others your country\'s or institution\'s grading scale. Send us an email to: gradingscaleapp@gmail.com</string>
    <string name="total_note">Overall grade</string>
    <string name="partial_grades">Partial grades</string>
    <string name="loading">Please wait: loading</string>
    <string name="error_loading">There was an error with the connection to the server. Please check your connection and try again</string>
    <string name="instruction_videos">Instruction Videos</string>


    <string name="link_video_calculator">GKEtaDrxNok</string>
    <string name="link_video_editor">ilNe8X8iviI</string>
    <string name="link_video_w_calc">zoEX9rsQS28</string>
    <string name="link_video_import">6GWUyoyMp2I</string>
    <string name="help_menu">Help Video</string>
    <string name="hello_blank_fragment">Help Videos</string>


</resources>
