<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".ui.help.HelpVideo">


    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_videos"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculatorVideoButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/grade_calculator_fraglabel"
        app:cornerRadius="6dp"
        app:icon="@drawable/ic_baseline_calculate_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editVideoButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/grade_scale_list_fragmentlabel"
        app:cornerRadius="6dp"
        app:icon="@drawable/ic_baseline_list_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculatorVideoButton"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wGCalcButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weighted_grade_calculation_fraglabel"
        app:cornerRadius="6dp"
        app:icon="@drawable/ic_baseline_grading_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editVideoButton"
        app:strokeColor="@color/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/importButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cornerRadius="6dp"
        app:icon="@drawable/ic_baseline_get_app_24"
        android:text="@string/import_grade_scales_fragment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wGCalcButton"
        app:strokeColor="@color/colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>