<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="8dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradenamePar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <AutoCompleteTextView
                android:id="@+id/gradeName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:hint="@string/grade"
                android:inputType="none"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/percentagePar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percentage_et"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/points_par"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/points_col"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_points_par"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_points_col"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</ScrollView>