<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.weightedcalculator.WeightedGradeCalcFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradescale_par"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <AutoCompleteTextView
                android:id="@+id/gradescale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/grade_scale"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                tools:ignore="Deprecated" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/total_note"
                android:textAlignment="center"
                android:textColor="@color/material_on_primary_emphasis_high_type"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/LabelTextAppearance"
                android:layout_weight="1"
                android:paddingHorizontal="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/total_weighted_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/total_grade_col"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:hintTextAppearance="@style/LabelTextAppearance"
                android:paddingHorizontal="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/percent_weighted_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/percentage_col"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:hintTextAppearance="@style/LabelTextAppearance"
                android:paddingHorizontal="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/points_col"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/LabelTextAppearance"
                android:paddingHorizontal="2dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/total_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/total_points_col"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/partial_grades"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weighted_grade_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_add_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
